--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm run install:all"]
+cmds = ["cd server && npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["cd server && npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "cd server && npm start"
