--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,12 @@
-# Full-stack build - serves both frontend and API
+# Backend API only - fast builds
 [phases.setup]
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm run install:all"]
+cmds = ["cd server && npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["cd server && npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "cd server && npm start"
