--- a/client/nixpacks.toml
+++ b/client/nixpacks.toml
@@ -1,12 +1,12 @@
-# Full stack - frontend + backend
+# Frontend static site - fast builds (~20s)
 [phases.setup]
 nixPkgs = ["nodejs_20"]
 
 [phases.install]
-cmds = ["npm run install:all"]
+cmds = ["npm install"]
 
 [phases.build]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm start"
+cmd = "npx serve dist -s -l $PORT"
