--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "sharp": "^0.34.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
