--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
+    "check": "cd client && npx tsc --noEmit && cd ../server && npx tsc --noEmit",
     "start": "cd server && npm start",
     "install:all": "npm install && cd client && npm install && cd ../server && npm install"
   },
