Aggressive railwayignore - exclude all node_modules and dist

--- a/.railwayignore
+++ b/.railwayignore
@@ -1,6 +1,22 @@
-# Don't upload these folders to Railway
+# Don't upload these to Railway
 jra/
 single-spa/
 microapps/
-*.log
+bridge-keeper/
+icons/
+
+# Node modules (should be installed during build)
+node_modules/
+**/node_modules/
+client/node_modules/
+server/node_modules/
+
+# Build artifacts (rebuilt during deploy)
+client/dist/
+server/dist/
+**/dist/
+
+# Dev stuff
 .git/
+*.log
+*.md
